# pretix-worldlinedirect

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_payonedirect/: apps.py  payment.py  paymentmethods.py  signals.py  urls.py
pretix_payonegopay/: apps.py  paymentmethods.py
pretix_worldlinedirect/: __init__.py  apps.py  payment.py  paymentmethods.py
pretix_worldlinedirect/locale/de/LC_MESSAGES/: django.po
