[project]
name = "pretix-worldlinedirect"
dynamic = ["version"]
description = "Accept payments through Worldline Direct"
readme = "README.rst"
license = {text = "pretix Enterprise"}
keywords = ["pretix"]
authors = [
    {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
    {name = "pretix team", email = "support@pretix.eu"},
]

dependencies = [
    "onlinepayments-sdk-python3==4.23.*",
]

[project.entry-points."pretix.plugin"]
pretix_worldlinedirect = "pretix_worldlinedirect:PretixPluginMeta"
pretix_payonedirect = "pretix_payonedirect:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://code.rami.io/pretix/pretix-worldlinedirect/"
repository = "https://code.rami.io/pretix/pretix-worldlinedirect/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_worldlinedirect.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
